--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body class="text-xl">
-    <div class="bg-cover bg-no-repeat bg-center" style="background-color: #B7C5E1; background-position: center 4px;">
-        <img src="background-removed-caesar-cipher.png">
+    <!-- <div class="bg-cover bg-no-repeat bg-center" style="background-color: #B7C5E1; background-position: center 4px;"> -->
+        <!-- <img src="background-removed-caesar-cipher.png"> -->
     <div id="container" class="mt-3 flex">
        
         <img id="innerCirc" class="mt-24 ml-auto mr-auto"  src="smaller-circle.png" alt="">
